syntax = "proto3";

package weather;

// Serviço WeatherService com o método GetWeather
service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

// Mensagem de requisição
message WeatherRequest {
  float latitude = 1; // Localização para buscar o clima
  float longitude = 2; // Localização para buscar o clima
}

// Mensagem de resposta
message WeatherResponse {
  string message = 1; // Mensagem de resposta
}
